# dobble

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
dobble/: __init__.py  __main__.py  cli.py  main.py  pyproject.toml  symbols.py  utils.py
tests/: test_dobble.py
